<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/nav_home"/>
        <item android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/nav_favourite"/>
        <item android:id="@+id/nav_history"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/nav_history"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>

            <item android:id="@+id/nav_changepassword"
                android:icon="@drawable/baseline_key_24"
                android:title="@string/nav_changepassword"/>
            <item android:id="@+id/nav_signout"
                android:icon="@drawable/exit"
                android:title="@string/nav_signout"/>
        </menu>
    </item>
</menu>